# MTM-project

./: FX Data and Interest rates.xlsx  FX_IR.xlsx
guarantee_vehicle/: README.md  pyproject.toml
guarantee_vehicle/examples/: config_example.yaml
guarantee_vehicle/src/guarantee_vehicle/: __init__.py  cli.py  config.py  dashboard.py
guarantee_vehicle/src/guarantee_vehicle/capital/: __init__.py  aggregation.py  rating_capital.py  returns.py  stack.py
guarantee_vehicle/src/guarantee_vehicle/credit/: __init__.py  correlation.py  default_model.py
guarantee_vehicle/src/guarantee_vehicle/guarantee/: __init__.py  contract.py  payout.py
guarantee_vehicle/src/guarantee_vehicle/instruments/: __init__.py  cashflows.py  ccs.py  conventions.py  ndf.py
guarantee_vehicle/src/guarantee_vehicle/io/: __init__.py  excel_loader.py  validation.py
guarantee_vehicle/src/guarantee_vehicle/market/: __init__.py  curves.py  fx.py  simulation.py
guarantee_vehicle/src/guarantee_vehicle/reporting/: __init__.py  charts.py  report_md.py  tables.py
